--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,24 @@
-sudo: false    
+sudo: false
+
+arch:
+  - amd64
+  - arm64
 
 language: python
 
+env:
+  - NUMPY_VERSION=1.11.0
+  - NUMPY_VERSION=1.12.1
+  - NUMPY_VERSION=1.13.0
+  - NUMPY_VERSION=1.14.0
+  - NUMPY_VERSION=1.15.0
+  - NUMPY_VERSION=1.16.0
 python:
+  - "3.4"
+  - "3.5"
   - "3.6"
+  - "3.7"
+  - "3.8"
 cache: pip
 install:
   - pip install -r requirements.txt
