--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,26 @@ env:
   - NUMPY_VERSION=1.14.0
   - NUMPY_VERSION=1.15.0
   - NUMPY_VERSION=1.16.0
+  
 python:
   - "3.4"
   - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
+
 cache: pip
+
+os:
+  - linux
+  - osx
+
+compiler:
+  - gcc
+  - clang
+
 install:
   - pip install -r requirements.txt
+
 script:
   - python -m unittest discover
