--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ env:
   - NUMPY_VERSION=1.14.0
   - NUMPY_VERSION=1.15.0
   - NUMPY_VERSION=1.16.0
+  - NUMPY_VERSION=1.17.0
+  - NUMPY_VERSION=1.18.0
 
 python:
   - "3.4"
