Changes in makefile

--- a/container-example/makefile
+++ b/container-example/makefile
@@ -1,6 +1,9 @@
 
 clonesrc:
+	rm -rf q_wrapper/
 	git clone https://github.com/detrin/q_wrapper
+	chmod -R +rw q_wrapper
+	rm -rf q_wrapper/.git
 
 copysrc:
 	cp -rf ../q_wrapper/ .
